--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "AsyncStorage": "^0.1.5",
+    "apisauce": "^1.0.2",
+    "immutable": "^4.0.0-rc.12",
     "react": "16.8.3",
     "react-native": "0.59.3",
-    "react-native-navigation": "^2.16.0"
+    "react-native-navigation": "^2.16.0",
+    "react-redux": "^6.0.1",
+    "react-timer-mixin": "^0.13.4",
+    "redux": "^4.0.1",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.0",
@@ -18,7 +26,11 @@
     "babel-jest": "24.6.0",
     "jest": "24.6.0",
     "metro-react-native-babel-preset": "0.53.1",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "reactotron-apisauce": "^3.0.0",
+    "reactotron-react-native": "^3.2.1",
+    "reactotron-redux": "^3.1.0",
+    "reactotron-redux-saga": "^4.2.1"
   },
   "jest": {
     "preset": "react-native"
