--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,7 +71,7 @@ import com.android.build.OutputFile
  *   extraPackagerArgs: []
  * ]
  */
-
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 project.ext.react = [
     entryFile: "index.js"
 ]
@@ -152,6 +152,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-navigation')
+    compile project(':react-native-vector-icons')
 }
 
 // Run this once to be able to run the application with BUCK
