--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "android": "react-native run-android"
+    "android": "react-native run-android",
+    "lint": "eslint .",
+    "flow": "flow"
   },
   "dependencies": {
     "AsyncStorage": "^0.1.5",
@@ -22,10 +24,18 @@
     "redux-saga": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "7.4.0",
-    "@babel/runtime": "7.4.2",
-    "babel-jest": "24.6.0",
-    "jest": "24.6.0",
+    "@babel/core": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.7.1",
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-native": "^3.6.0",
+    "flow-bin": "^0.92.0",
+    "jest": "^24.7.1",
     "metro-react-native-babel-preset": "0.53.1",
     "react-test-renderer": "16.8.3",
     "reactotron-apisauce": "^3.0.0",
